src/styles.css
/* ... */
.oscuro .toolbar #logo {
  fill: var(--color-navy-blue);
}

.oscuro .card.highlight-card:hover {
  box-shadow: 0px 3px 6px var(--color-orange-yellow-crayola);
}

.oscuro .card.highlight-card.card-small span {
  color: var(--color-white);
}

.oscuro .card.card.highlight-card span.no-margin {
  color: var(--color-white);
}

.oscuro .circle-link {
  background-color: var(--color-jet);
}

.oscuro .circle-link:hover {
  transform: translateY(-4px);
  box-shadow: 0px 3px 12px var(--color-white);
}

.oscuro .circle-link svg {
  fill: var(--color-white);
}

.oscuro .circle-link svg:hover {
  fill: var(--color-navy-blue);
}

.oscuro svg circle {
  fill: var(--color-fulvous);
}

.oscuro .search {
  border-color: var(--color-navy-blue);
}

.oscuro .search:focus {
  border-color: var(--color-fulvous);
}

.oscuro .close-glosary svg:hover {
  fill: var(--color-crimson);
}

.oscuro .close-glosary {
  background-color: var(--color-jet);
}

.oscuro .glass-efect {
  background: rgba(var(--color-white), 0.2);
  box-shadow: 2px 2px 4px 2px var(--color-fulvous);
  border: 1px solid rgba(var(--color-night), 0.18);
}

.oscuro .glass-efect:hover {
  box-shadow: 2px 2px 4px 2px var(--color-navy-blue);
}

.oscuro .tooltiptext.gradient {
  background: linear-gradient(334deg, var(--color-french-sky-blue), var(--color-navy-blue), var(--color-raisin-black));
  background-size: 180% 180%;
  animation: gradient-animation 4s ease infinite;
}

.oscuro .gradient {
  background: linear-gradient(334deg, var(--color-french-sky-blue), var(--color-navy-blue), var(--color-raisin-black));
  background-size: 180% 180%;
  animation: gradient-animation 4s alternate infinite;
}

.oscuro .share-button-back {
  background-color: var(--color-fulvous);
}

.oscuro .card.card-small.itemSelected  {
  color: var(--color-navy-blue);
  border-color: var(--color-french-sky-blue);
}

.oscuro div.terminal.window h2 {
  --c1: var(--color-navy-blue);
  --c2: var(--color-french-sky-blue);
}

.oscuro #snackbar {
  color: var(--color-cultured);
  background-color: var(--color-french-sky-blue);
  box-shadow: 0 4px 10px var(--color-navy-blue);
}

.oscuro button:disabled:hover {
  background-color: var(--color-french-sky-blue);
}

/* fin del modo oscuro */

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 8px 0;
  align-items: center;
  text-align: center;
}

p {
  margin: 0;
}

.spacer {
  flex: 1;
}

.toolbar {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 60px;
  display: flex;
  align-items: center;
  background-color: var(--color-night);
  color: var(--color-white);
  font-weight: 600;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

.toolbar span {
  text-emphasis: none;
  text-decoration: none;
  text-emphasis-color: var(--color-white);
}

.toolbar #logo {
  height: 40px;
  margin: 0 16px;
  padding: 0 0 0 0;
  fill: var(--color-selective-yellow);
}

.toolbar #logo:hover {
  opacity: 0.8;
}

.content {
  display: flex;
  margin: 3em auto 2em;
  padding: 0;
  max-width: 1280px;
  flex-direction: column;
  align-items: center;
}

.content.less-margin {
  margin: 1em auto 2em;
}

/*https://ed.team/blog/personaliza-el-scroll-de-tu-web-solo-con-css*/
.scroll::-webkit-scrollbar {
  width: 7px;
}

.scroll::-webkit-scrollbar-track {
  border-radius: 6px;
}

.scroll::-webkit-scrollbar-thumb {
  background-color: var(--color-orange-yellow-crayola);
  border-radius: 6px;
}

.scroll::-webkit-scrollbar-thumb:hover {
  background-color: var(--color-selective-yellow);
}

svg.material-icons {
  height: 24px;
  width: auto;
}

svg.material-icons:not(:last-child) {
  margin-right: 8px;
}

.card svg.material-icons path {
  fill: var(--color-night);
}

.card-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 16px;
}

.card-container.less-margin {
  margin-top: 4px;
}

.card {
  border-radius: 6px;
  border: 1px solid var(--color-cultured);
  background-color: #fafafa;
  height: 36px;
  width: 180px;
  margin: 0 8px 16px;
  padding: 12px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  transition: all 0.2s ease-in-out;
  line-height: 24px;
  outline: none;
}

.card-container .card:not(:last-child) {
  margin-right: 0;
}

.card.card-small {
  height: 16px;
  width: 168px;
}

.card-container .card:not(.highlight-card) {
  cursor: pointer;
}

.card-container .card:not(.highlight-card):hover {
  transform: translateY(-3px);
  box-shadow: 0 4px 16px var(--color-night, 0.35);
}

.card-container .card:not(.highlight-card):hover .material-icons path {
  fill: var(--color-selective-yellow);
}

.card.highlight-card {
  background-color: var(--color-selective-yellow);
  color: var(--color-white);
  font-weight: 600;
  border: none;
  width: auto;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: relative;
}

.card.highlight-card.light-color {
  background-color: var(--color-fulvous);
}

.card.highlight-card:hover {
  cursor: pointer;
  transform: translateY(4px);
  box-shadow: 0px 3px 7px var(--color-french-sky-blue);
}

.card.card.highlight-card span {
  color: var(--color-night);
}

.card.card.highlight-card span.no-margin {
  color: var(--color-night);
}

svg circle {
  fill: var(--color-crimson);
}

a,
a:visited,
a:hover {
  color: var(--color-navy-blue);
  text-decoration: none;
}

.card-container a {
  color: var(--color-night);
}
/* ... */

